[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lemur"
dynamic = ["version"]
description = "Certificate management and orchestration service"
authors = [
    {name = "The Lemur developers", email = "security@netflix.com"},
]
readme = "README.rst"
requires-python = ">=3.10"
license = {text = "Apache License, Version 2.0"}
classifiers = [
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Natural Language :: English",
    "License :: OSI Approved :: Apache Software License"
]

# Keep using requirements.txt files for now
dependencies = []

[project.urls]
Homepage = "https://github.com/Netflix/lemur"
Repository = "https://github.com/Netflix/lemur"

[project.scripts]
lemur = "lemur.manage:main"

[tool.setuptools]
packages = ["lemur"]

[tool.setuptools_scm]